Fix Social Buttons On Mobile

--- a/assets/stylesheets/sass/partials/index.scss
+++ b/assets/stylesheets/sass/partials/index.scss
@@ -136,40 +136,75 @@ body {
   section#contact {
     padding: 3rem 1rem 4rem;
 
-    form {
+    >div {
 
-      div.form-group {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1.5rem;
+      >form {
 
-        >label {
-          text-transform: uppercase;
+        div.form-group {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 1.5rem;
+
+          >label {
+            text-transform: uppercase;
+          }
+
+          >input, >textarea {
+            padding: .5rem;
+            border: 1px solid $dark-gray;
+          }
+
+          >textarea {
+            min-height: 150px;
+          }
+
+          >button {
+            padding: .8rem 1rem;
+            background: $brand-orange;
+            border: 1px solid $dark-gray;
+            border-radius: 5px;
+            box-shadow: $dark-gray 0px 5px 15px -8px;
+
+            color: $dark-gray;
+            font-weight: bold;
+            text-decoration: none;
+            text-transform: uppercase;
+
+            &:active {
+              box-shadow: $dark-gray 0px 0px 0px 0px;
+            }
+          }
+        }
+      }
+
+      // Social media links
+      >div {
+        h3 {
+          font-size: 2.3rem;
+          text-align: center;
         }
 
-        >input, >textarea {
-          padding: .5rem;
-          border: 1px solid $dark-gray;
-        }
+        >ul {
+          list-style: none;
+          padding: 0;
+          margin: 0;
 
-        >textarea {
-          min-height: 150px;
-        }
+          >li {
+            text-align: center;
+            margin: .75rem;
 
-        >button {
-          padding: .8rem 1rem;
-          background: $brand-orange;
-          border: 1px solid $dark-gray;
-          border-radius: 5px;
-          box-shadow: $dark-gray 0px 5px 15px -8px;
+            >a {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              color: $dark-gray;
+              text-decoration: none;
 
-          color: $dark-gray;
-          font-weight: bold;
-          text-decoration: none;
-          text-transform: uppercase;
-
-          &:active {
-            box-shadow: $dark-gray 0px 0px 0px 0px;
+              >img {
+                width: 150px;
+                margin: 0 auto;
+              }
+            }
           }
         }
       }
